improve nginx ssl configuration

--- a/letsencrypt-host-renew/templates/nginx-ssl-le.j2
+++ b/letsencrypt-host-renew/templates/nginx-ssl-le.j2
@@ -9,6 +9,6 @@ ssl_session_cache shared:SSL:10m;
 ssl_dhparam /etc/nginx/ssl/dhparam4096.pem;
 ssl_ecdh_curve secp384r1;
 add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
-add_header X-Frame-Options DENY;
+add_header X-Frame-Options SAMEORIGIN;
 add_header X-Content-Type-Options nosniff;
 add_header Public-Key-Pins 'pin-sha256="u5W9WtwkqWC2WxPYHI3Sd/umrIYNgpFGbGAZz5lb+BI="; pin-sha256="EII8GlQkHH5JliRPNQOXOIVf8/kH5pcNNtzv3g6LZy0="; max-age=31536000; includeSubDomains';
