--- a/letsencrypt-host-renew-nginx/templates/nginx-ssl-le.j2
+++ b/letsencrypt-host-renew-nginx/templates/nginx-ssl-le.j2
@@ -9,7 +9,7 @@ ssl_prefer_server_ciphers on;
 ssl_session_cache shared:SSL:10m;
 ssl_dhparam /etc/nginx/ssl/dhparam4096.pem;
 ssl_ecdh_curve secp384r1;
-add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
+add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload";
 add_header X-Frame-Options SAMEORIGIN;
 add_header X-Content-Type-Options nosniff;
 add_header Public-Key-Pins 'pin-sha256="06uVduCFrRCU6bREnUOVa8Kunp52TUnP+V/YA+Q2yLY="; pin-sha256="EII8GlQkHH5JliRPNQOXOIVf8/kH5pcNNtzv3g6LZy0="; max-age=31536000; includeSubDomains';
